fixing swagger in fields requirements
